broker/dgdl/antlr/dgdlParser.py
# Generated from dgdl/antlr/dgdl.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class dgdlParser ( Parser ):

    grammarFileName = "dgdl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'uri'", "'gettop'", "'getbot'", "'pop'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'<'", "'>'", "','", "':'", "'('", "')'", "'{'", "'}'", 
                     "'$'", "'&'", "'||'", "'active'", "'add'", "'assign'", 
                     "'backing'", "'backtrack'", "'complete'", "'corresponds'", 
                     "'current'", "'delete'", "'else'", "'elseif'", "'!empty'", 
                     "'empty'", "'!equal'", "'equal'", "'event'", "'extCondition'", 
                     "'extEffect'", "'extURI'", "'future'", "'greater'", 
                     "'hello'", "'id'", "'if'", "'!in'", "'in'", "'inactive'", 
                     "'incomplete'", "'initial'", "'initiate'", "'inrole'", 
                     "'inspect'", "'interaction'", "'!last'", "'last'", 
                     "'legalmoves'", "'liberal'", "'listener'", "'magnitude'", 
                     "'max'", "'maxturns'", "'min'", "'move'", "'movewise'", 
                     "'multiple'", "'next'", "'!'", "'numturns'", "'off'", 
                     "'!on'", "'on'", "'ordering'", "'owner'", "'!past'", 
                     "'past'", "'player'", "'players'", "'private'", "'public'", 
                     "'queue'", "'relation'", "'remove'", "'roles'", "'rule'", 
                     "'scope'", "'set'", "'shared'", "'single'", "'size'", 
                     "'smaller'", "'speaker'", "'stack'", "'status'", "'store'", 
                     "'strict'", "'structure'", "'terminate'", "'then'", 
                     "'!top'", "'top'", "'turns'", "'turnwise'", "'undefined'", 
                     "'visibility'", "'warrant'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "Identifier", "LowerChar", "Number", 
                      "UpperChar", "LESSTHAN", "GREATERTHAN", "COMMA", "COLON", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "DOLLAR", 
                      "AND", "OR", "ACTIVE", "ADD", "ASSIGN", "BACKING", 
                      "BACKTRACK", "COMPLETE", "CORRESPONDS", "CURRENT", 
                      "DELETE", "ELSE", "ELSEIF", "NOTEMPTY", "EMPTY", "NOTEQUAL", 
                      "EQUAL", "EVENT", "EXTCONDITION", "EXTEFFECT", "EXTURI", 
                      "FUTURE", "GREATER", "HELLO", "ID", "IF", "NOTIN", 
                      "IN", "INACTIVE", "INCOMPLETE", "INITIAL", "INITIATE", 
                      "INROLE", "INSPECT", "INTERACTION", "NOTLAST", "LAST", 
                      "LEGALMOVES", "LIBERAL", "LISTENER", "MAGNITUDE", 
                      "MAX", "MAXTURNS", "MIN", "MOVE", "MOVEWISE", "MULTIPLE", 
                      "NEXT", "NOT", "NUMTURNS", "OFF", "NOTON", "ON", "ORDERING", 
                      "OWNER", "NOTPAST", "PAST", "PLAYER", "PLAYERS", "PRIVATE", 
                      "PUBLIC", "QUEUE", "RELATION", "REMOVE", "ROLES", 
                      "RULE", "SCOPE", "SET", "SHARED", "SINGLE", "SIZE", 
                      "SMALLER", "SPEAKER", "STACK", "STATUS", "STORE", 
                      "STRICT", "STRUCTURE", "TERMINATE", "THEN", "NOTTOP", 
                      "TOP", "TURNS", "TURNWISE", "UNDEFINED", "VISIBILITY", 
                      "WARRANT", "STRINGLITERAL", "SPACE", "COMMENT", "LINE_COMMENT" ]

    RULE_system = 0
    RULE_systemID = 1
    RULE_game = 2
    RULE_gameID = 3
    RULE_composition = 4
    RULE_turns = 5
    RULE_turnSize = 6
    RULE_ordering = 7
    RULE_maxTurns = 8
    RULE_runTimeVar = 9
    RULE_roleList = 10
    RULE_role = 11
    RULE_participants = 12
    RULE_minplayers = 13
    RULE_maxplayers = 14
    RULE_player = 15
    RULE_playerID = 16
    RULE_extURImap = 17
    RULE_extURIID = 18
    RULE_extURI = 19
    RULE_store = 20
    RULE_storeName = 21
    RULE_storeOwner = 22
    RULE_storeStructure = 23
    RULE_visibility = 24
    RULE_backtrack = 25
    RULE_rule = 26
    RULE_ruleID = 27
    RULE_scopeType = 28
    RULE_ruleBody = 29
    RULE_effects = 30
    RULE_effect = 31
    RULE_parameter = 32
    RULE_content = 33
    RULE_contentItem = 34
    RULE_contentSet = 35
    RULE_contentVar = 36
    RULE_contentStr = 37
    RULE_conditional = 38
    RULE_condelseif = 39
    RULE_condelse = 40
    RULE_requirements = 41
    RULE_condition = 42
    RULE_interaction = 43
    RULE_addressee = 44
    RULE_target = 45
    RULE_schemeApp = 46
    RULE_forcetarget = 47
    RULE_forceID = 48
    RULE_opener = 49
    RULE_event = 50
    RULE_eventpos = 51
    RULE_storeInspection = 52
    RULE_storepos = 53
    RULE_roleInspection = 54
    RULE_magnitude = 55
    RULE_container = 56
    RULE_containersize = 57
    RULE_storeComparison = 58
    RULE_comparison = 59
    RULE_store1 = 60
    RULE_user1 = 61
    RULE_store2 = 62
    RULE_user2 = 63
    RULE_dialogueSize = 64
    RULE_correspondence = 65
    RULE_relation = 66
    RULE_currentPlayer = 67
    RULE_externalCondition = 68
    RULE_user = 69
    RULE_schemeID = 70
    RULE_commitment = 71
    RULE_locution = 72
    RULE_argument = 73
    RULE_premises = 74
    RULE_conclusion = 75
    RULE_move = 76
    RULE_moveaction = 77
    RULE_movetime = 78
    RULE_storeOp = 79
    RULE_storeaction = 80
    RULE_statusUpdate = 81
    RULE_status = 82
    RULE_roleAssignment = 83
    RULE_externalEffect = 84
    RULE_moveID = 85
    RULE_sysgame = 86
    RULE_upperChar = 87
    RULE_lowerChar = 88
    RULE_identifier = 89
    RULE_number = 90

    ruleNames =  [ "system", "systemID", "game", "gameID", "composition", 
                   "turns", "turnSize", "ordering", "maxTurns", "runTimeVar", 
                   "roleList", "role", "participants", "minplayers", "maxplayers", 
                   "player", "playerID", "extURImap", "extURIID", "extURI", 
                   "store", "storeName", "storeOwner", "storeStructure", 
                   "visibility", "backtrack", "rule", "ruleID", "scopeType", 
                   "ruleBody", "effects", "effect", "parameter", "content", 
                   "contentItem", "contentSet", "contentVar", "contentStr", 
                   "conditional", "condelseif", "condelse", "requirements", 
                   "condition", "interaction", "addressee", "target", "schemeApp", 
                   "forcetarget", "forceID", "opener", "event", "eventpos", 
                   "storeInspection", "storepos", "roleInspection", "magnitude", 
                   "container", "containersize", "storeComparison", "comparison", 
                   "store1", "user1", "store2", "user2", "dialogueSize", 
                   "correspondence", "relation", "currentPlayer", "externalCondition", 
                   "user", "schemeID", "commitment", "locution", "argument", 
                   "premises", "conclusion", "move", "moveaction", "movetime", 
                   "storeOp", "storeaction", "statusUpdate", "status", "roleAssignment", 
                   "externalEffect", "moveID", "sysgame", "upperChar", "lowerChar", 
                   "identifier", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    Identifier=5
    LowerChar=6
    Number=7
    UpperChar=8
    LESSTHAN=9
    GREATERTHAN=10
    COMMA=11
    COLON=12
    LPAREN=13
    RPAREN=14
    LBRACE=15
    RBRACE=16
    DOLLAR=17
    AND=18
    OR=19
    ACTIVE=20
    ADD=21
    ASSIGN=22
    BACKING=23
    BACKTRACK=24
    COMPLETE=25
    CORRESPONDS=26
    CURRENT=27
    DELETE=28
    ELSE=29
    ELSEIF=30
    NOTEMPTY=31
    EMPTY=32
    NOTEQUAL=33
    EQUAL=34
    EVENT=35
    EXTCONDITION=36
    EXTEFFECT=37
    EXTURI=38
    FUTURE=39
    GREATER=40
    HELLO=41
    ID=42
    IF=43
    NOTIN=44
    IN=45
    INACTIVE=46
    INCOMPLETE=47
    INITIAL=48
    INITIATE=49
    INROLE=50
    INSPECT=51
    INTERACTION=52
    NOTLAST=53
    LAST=54
    LEGALMOVES=55
    LIBERAL=56
    LISTENER=57
    MAGNITUDE=58
    MAX=59
    MAXTURNS=60
    MIN=61
    MOVE=62
    MOVEWISE=63
    MULTIPLE=64
    NEXT=65
    NOT=66
    NUMTURNS=67
    OFF=68
    NOTON=69
    ON=70
    ORDERING=71
    OWNER=72
    NOTPAST=73
    PAST=74
    PLAYER=75
    PLAYERS=76
    PRIVATE=77
    PUBLIC=78
    QUEUE=79
    RELATION=80
    REMOVE=81
    ROLES=82
    RULE=83
    SCOPE=84
    SET=85
    SHARED=86
    SINGLE=87
    SIZE=88
    SMALLER=89
    SPEAKER=90
    STACK=91
    STATUS=92
    STORE=93
    STRICT=94
    STRUCTURE=95
    TERMINATE=96
    THEN=97
    NOTTOP=98
    TOP=99
    TURNS=100
    TURNWISE=101
    UNDEFINED=102
    VISIBILITY=103
    WARRANT=104
    STRINGLITERAL=105
    SPACE=106
    COMMENT=107
    LINE_COMMENT=108

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SystemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def systemID(self):
            return self.getTypedRuleContext(dgdlParser.SystemIDContext,0)


        def LBRACE(self):
            return self.getToken(dgdlParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(dgdlParser.RBRACE, 0)

        def game(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dgdlParser.GameContext)
            else:
                return self.getTypedRuleContext(dgdlParser.GameContext,i)


        def getRuleIndex(self):
            return dgdlParser.RULE_system

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSystem" ):
                listener.enterSystem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSystem" ):
                listener.exitSystem(self)




    def system(self):

        localctx = dgdlParser.SystemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_system)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.systemID()
            self.state = 183
            self.match(dgdlParser.LBRACE)
            self.state = 185 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 184
                self.game()
                self.state = 187 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==5):
                    break

            self.state = 189
            self.match(dgdlParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SystemIDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(dgdlParser.IdentifierContext,0)


        def getRuleIndex(self):
            return dgdlParser.RULE_systemID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSystemID" ):
                listener.enterSystemID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSystemID" ):
                listener.exitSystemID(self)




    def systemID(self):

        localctx = dgdlParser.SystemIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_systemID)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gameID(self):
            return self.getTypedRuleContext(dgdlParser.GameIDContext,0)


        def LBRACE(self):
            return self.getToken(dgdlParser.LBRACE, 0)

        def composition(self):
            return self.getTypedRuleContext(dgdlParser.CompositionContext,0)


        def RBRACE(self):
            return self.getToken(dgdlParser.RBRACE, 0)

        def rule_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dgdlParser.RuleContext)
            else:
                return self.getTypedRuleContext(dgdlParser.RuleContext,i)


        def interaction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dgdlParser.InteractionContext)
            else:
                return self.getTypedRuleContext(dgdlParser.InteractionContext,i)


        def getRuleIndex(self):
            return dgdlParser.RULE_game

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGame" ):
                listener.enterGame(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGame" ):
                listener.exitGame(self)




    def game(self):

        localctx = dgdlParser.GameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_game)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.gameID()
            self.state = 194
            self.match(dgdlParser.LBRACE)
            self.state = 195
            self.composition()
            self.state = 199
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==83:
                self.state = 196
                self.rule_()
                self.state = 201
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 203 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 202
                self.interaction()
                self.state = 205 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==52):
                    break

            self.state = 207
            self.match(dgdlParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GameIDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(dgdlParser.IdentifierContext,0)


        def getRuleIndex(self):
            return dgdlParser.RULE_gameID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGameID" ):
                listener.enterGameID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGameID" ):
                listener.exitGameID(self)




    def gameID(self):

        localctx = dgdlParser.GameIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_gameID)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 209
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompositionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def turns(self):
            return self.getTypedRuleContext(dgdlParser.TurnsContext,0)


        def participants(self):
            return self.getTypedRuleContext(dgdlParser.ParticipantsContext,0)


        def roleList(self):
            return self.getTypedRuleContext(dgdlParser.RoleListContext,0)


        def player(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dgdlParser.PlayerContext)
            else:
                return self.getTypedRuleContext(dgdlParser.PlayerContext,i)


        def extURImap(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dgdlParser.ExtURImapContext)
            else:
                return self.getTypedRuleContext(dgdlParser.ExtURImapContext,i)


        def store(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dgdlParser.StoreContext)
            else:
                return self.getTypedRuleContext(dgdlParser.StoreContext,i)


        def backtrack(self):
            return self.getTypedRuleContext(dgdlParser.BacktrackContext,0)


        def getRuleIndex(self):
            return dgdlParser.RULE_composition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComposition" ):
                listener.enterComposition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComposition" ):
                listener.exitComposition(self)




    def composition(self):

        localctx = dgdlParser.CompositionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_composition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 211
            self.turns()
            self.state = 213
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==82:
                self.state = 212
                self.roleList()


            self.state = 215
            self.participants()
            self.state = 217 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 216
                self.player()
                self.state = 219 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==75):
                    break

            self.state = 224
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==38:
                self.state = 221
                self.extURImap()
                self.state = 226
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 230
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==93:
                self.state = 227
                self.store()
                self.state = 232
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 234
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 233
                self.backtrack()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TurnsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TURNS(self):
            return self.getToken(dgdlParser.TURNS, 0)

        def LBRACE(self):
            return self.getToken(dgdlParser.LBRACE, 0)

        def turnSize(self):
            return self.getTypedRuleContext(dgdlParser.TurnSizeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(dgdlParser.COMMA)
            else:
                return self.getToken(dgdlParser.COMMA, i)

        def ordering(self):
            return self.getTypedRuleContext(dgdlParser.OrderingContext,0)


        def RBRACE(self):
            return self.getToken(dgdlParser.RBRACE, 0)

        def maxTurns(self):
            return self.getTypedRuleContext(dgdlParser.MaxTurnsContext,0)


        def getRuleIndex(self):
            return dgdlParser.RULE_turns

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTurns" ):
                listener.enterTurns(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTurns" ):
                listener.exitTurns(self)




    def turns(self):

        localctx = dgdlParser.TurnsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_turns)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 236
            self.match(dgdlParser.TURNS)
            self.state = 237
            self.match(dgdlParser.LBRACE)
            self.state = 238
            self.turnSize()
            self.state = 239
            self.match(dgdlParser.COMMA)
            self.state = 240
            self.ordering()
            self.state = 243
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 241
                self.match(dgdlParser.COMMA)
                self.state = 242
                self.maxTurns()


            self.state = 245
            self.match(dgdlParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TurnSizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAGNITUDE(self):
            return self.getToken(dgdlParser.MAGNITUDE, 0)

        def COLON(self):
            return self.getToken(dgdlParser.COLON, 0)

        def number(self):
            return self.getTypedRuleContext(dgdlParser.NumberContext,0)


        def SINGLE(self):
            return self.getToken(dgdlParser.SINGLE, 0)

        def MULTIPLE(self):
            return self.getToken(dgdlParser.MULTIPLE, 0)

        def getRuleIndex(self):
            return dgdlParser.RULE_turnSize

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTurnSize" ):
                listener.enterTurnSize(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTurnSize" ):
                listener.exitTurnSize(self)




    def turnSize(self):

        localctx = dgdlParser.TurnSizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_turnSize)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 247
            self.match(dgdlParser.MAGNITUDE)
            self.state = 248
            self.match(dgdlParser.COLON)
            self.state = 252
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.state = 249
                self.number()
                pass
            elif token in [87]:
                self.state = 250
                self.match(dgdlParser.SINGLE)
                pass
            elif token in [64]:
                self.state = 251
                self.match(dgdlParser.MULTIPLE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrderingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ORDERING(self):
            return self.getToken(dgdlParser.ORDERING, 0)

        def COLON(self):
            return self.getToken(dgdlParser.COLON, 0)

        def STRICT(self):
            return self.getToken(dgdlParser.STRICT, 0)

        def LIBERAL(self):
            return self.getToken(dgdlParser.LIBERAL, 0)

        def getRuleIndex(self):
            return dgdlParser.RULE_ordering

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrdering" ):
                listener.enterOrdering(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrdering" ):
                listener.exitOrdering(self)




    def ordering(self):
